# machine-learning-sandbox

./: .gitignore  README.md
01_markov_chains/: README.md
markov_chains_text_generation/: README.md  pyproject.toml  x
markov_chains_text_generation/markov_chains_text_generation/: data.py  dialogs.py  legacy.py  markov_chain.py  markov_chain2.py  sandbox.py  serialization.py  training.py
markov_chains_text_generation/tests/: test_markov_chains_text_generation.py
