[tool.poetry]
name = "markov_chains_text_generation"
version = "0.1.0"
description = ""
authors = ["Wojtek Majewski <jumski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
sandbox = "markov_chains_text_generation.sandbox:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
